--- a/app/css/login.css
+++ b/app/css/login.css
@@ -38,6 +38,7 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
 .account-wall
 {
     margin-top: 20px;
@@ -46,6 +47,11 @@
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.3);
+}
+.nopadding
+{
+    padding: 1px !important;
+    margin: 0 !important;
 }
 .login-title
 {
