--- a/app/css/login.css
+++ b/app/css/login.css
@@ -12,6 +12,18 @@
 {
     font-weight: normal;
 }
+@font-face {
+    font-family: 'Righteous-Regular';
+    src: url('fonts/Righteous/Righteous-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Monoton';
+    src: url('fonts/Monoton/Monoton-Regular.tff') format('truetype');
+}
+#logo1
+{
+    font-family: Monoton;
+}
 .form-signin .form-control
 {
     position: relative;
