added template and bootstrap.js and fonts of bootstrap

--- a/app/css/login.css
+++ b/app/css/login.css
@@ -14,15 +14,17 @@
 }
 @font-face {
     font-family: 'Righteous-Regular';
-    src: url('fonts/Righteous/Righteous-Regular.ttf') format('truetype');
+    src: url('../fonts/Righteous/Righteous-Regular.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Monoton';
-    src: url('fonts/Monoton/Monoton-Regular.tff') format('truetype');
+    src: url('../fonts/Monoton/Monoton-Regular.ttf') format('truetype');
 }
 #logo1
 {
-    font-family: Monoton;
+    font-family: 'Monoton';
+    font-size: larger;
+    padding-top: 10px;
 }
 .form-signin .form-control
 {
