--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -57,3 +57,10 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+#parentChat
+{
+    position: fixed;
+    display: inline-block;
+    width: 100%;
+    height:100%;
+}
