--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -59,8 +59,7 @@
 }
 #parentChat
 {
-    position: fixed;
-    display: inline-block;
+    position: absolute;
     height: 100%;
     width: 100%;
 }
