--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -60,7 +60,9 @@
 #parentChat
 {
     z-index: 1000;
-    display: block;
-    height: 100%;
-    width: 100%;
+    position: fixed;
+    top:0px;
+    left: 0px;
+    height: 100vh;
+    width: 100vw;
 }
