--- a/app/css/general.css
+++ b/app/css/general.css
@@ -3,4 +3,7 @@ footer
     height: 20px;
     position: absolute;
     bottom:0;
+    background-color: #555;
+    color: white;
+    padding: 15px;
 }
