--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -1,6 +1,6 @@
 .chat
 {
-    list-style: none;
+    list-style: circle;
     margin: 0;
     padding: 0;
 }
@@ -57,12 +57,7 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
-#parentChat
+#chat
 {
     z-index: 1000;
-    position: fixed;
-    top:0px;
-    left: 0px;
-    height: 100vh;
-    width: 100vw;
 }
