--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -57,6 +57,11 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+.nopadding
+{
+    padding: 1px !important;
+    margin: 0 !important;
+}
 #chat
 {
     z-index: 1000;
