--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -26,7 +26,7 @@
 .chat .chat-body p
 {
     margin: 0;
-    color: #777777;
+    color: #000c77;
 }
 
 .panel .slidedown .glyphicon, .chat .glyphicon
@@ -36,7 +36,7 @@
 
 .panel-body
 {
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 250px;
 }
 
