--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -75,7 +75,7 @@
 #headChat
 {
     position: relative;
-    height: auto;
+    height: 31px;
 }
 #bodyChat
 {
@@ -86,6 +86,15 @@
 {
     position: relative;
     height: 10%;
+}
+#boutondrag
+{
+    position: absolute;
+    left: 5px;
+    right: auto;
+    bottom: 2px;
+    top: 2px;
+    height: 25px;
 }
 
 
