--- a/app/css/listUser.css
+++ b/app/css/listUser.css
@@ -5,7 +5,7 @@
     right: 10px;
     top: 72px;
     bottom: auto;
-    height: auto;
+    height: 93%;
 }
 .definelong
 {
@@ -14,4 +14,29 @@
 #userItem
 {
 
+}
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 15px;
+}
+.btn-circle.btn-lg {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
+}
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
 }
