--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -26,7 +26,7 @@
 .chat .chat-body p
 {
     margin: 0;
-    color: #777777;
+    color: #000c77;
 }
 
 .panel .slidedown .glyphicon, .chat .glyphicon
@@ -36,7 +36,7 @@
 
 .panel-body
 {
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 250px;
 }
 
@@ -59,10 +59,98 @@
 }
 .nopadding
 {
-    padding: 1px !important;
+    padding: 3px !important;
     margin: 0 !important;
 }
-#chat
+#containerChat
 {
     z-index: 1000;
+    position: fixed;
+    left: 10px;
+    right: auto;
+    top: auto;
+    bottom: 2px;
+    height: 55%;
+    width: auto;
 }
+#headChat
+{
+    position: relative;
+    height: 31px;
+}
+#bodyChat
+{
+    position: relative;
+    height: 75%;
+}
+#footerChat
+{
+    position: relative;
+    height: auto;
+}
+#boutondrag
+{
+    position: absolute;
+    left: 5px;
+    right: auto;
+    bottom: 2px;
+    top: 2px;
+    height: 25px;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 25px;
+}
+
+.switch input {display:none;}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #9ca79f;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 25px;
+    width: 25px;
+    left: 0px;
+    bottom: 0px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2ef31b;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
