--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -57,10 +57,14 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
-.nopadding
+.hiddenMessage
 {
-    padding: 3px !important;
-    margin: 0 !important;
+    max-height: 30px;
+    overflow: hidden;
+}
+.hideON
+{
+    height: 30px !important;
 }
 #containerChat
 {
@@ -70,40 +74,43 @@
     right: auto;
     top: auto;
     bottom: 5px;
-    height: 53%;
-    width: 25%;
+    height: 60%;
+    width: 23%;
     pointer-events: auto;
 }
-.hiddenMessage
-{
-    max-height: 31px;
-    overflow: hidden;
-}
+
 #headChat
 {
-    position: relative;
-    height: 31px;
+    position: absolute;
+    height: 8%;
+    width: 100%;
+    top: 0%;
+    left: 0px;
+    right:auto;
 }
 #bodyChat
 {
-    position: relative;
-    height: 75%;
+    position: absolute;
+    height: 80%;
+    width: 99%;
+    top: 8%;
     overflow-x: hidden;
     overflow-y: scroll;
 }
 #footerChat
 {
-    position: relative;
-    height: auto;
+    position: absolute;
+    height: 12%;
+    bottom: 0%;
 }
 #boutondrag
 {
     position: absolute;
-    left: 5px;
+    left: 5%;
     right: auto;
-    bottom: 2px;
-    top: 2px;
-    height: 25px;
+    bottom: auto;
+    top: auto;
+    height: 70%;
 }
 #limiteChat
 {
@@ -120,6 +127,7 @@
     display: inline-block;
     width: 50px;
     height: 25px;
+    margin-bottom: 0;
 }
 
 .switch input {display:none;}
@@ -127,10 +135,10 @@
 .slider {
     position: absolute;
     cursor: pointer;
-    top: 0;
+    top: 10%;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 15%;
     background-color: #9ca79f;
     -webkit-transition: .4s;
     transition: .4s;
@@ -139,8 +147,8 @@
 .slider:before {
     position: absolute;
     content: "";
-    height: 25px;
-    width: 25px;
+    height: 100%;
+    width: 35%;
     left: 0px;
     bottom: 0px;
     background-color: white;
@@ -181,5 +189,3 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
-
-
