--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -503,7 +503,7 @@
     width: 24%;
     pointer-events: auto;
     border-top: solid;
-    border-top-color: #1b6d85;
+    border-top-color: #2ef31b;
 }
 #limiteChat
 {
@@ -524,13 +524,18 @@
     top: 0%;
     left: 0px;
     right:auto;
-    background-color: #26a685;
+    background-color: #1b6d85;
+    color: #080808;
 }
 #actualiser
 {
     position: relative;
-    right: 15px;
-    color: #000c77;
+    right: 5px;
+    color: #000000;
+}
+#option_chat
+{
+    top: 8px;
 }
 #boutondrag
 {
@@ -560,7 +565,7 @@
 {
     position: absolute;
     right: 30%;
-    top: 20%;
+    top: 15%;
     bottom: 20%;
     width: 20px;
     height: 20px;
@@ -572,7 +577,7 @@
     width: 100%;
     top: 10%;
     overflow: hidden;
-    background-color: #1b6d85;
+    background-color: #26a685;
 }
 #chatsMessage
 {
@@ -583,7 +588,6 @@
     overflow-x: hidden;
     overflow-y: scroll;
 }
-
 #footerChat
 {
     position: absolute;
@@ -592,7 +596,11 @@
     left: 0%;
     right: 0%;
     bottom: 0%;
-    background-color: #26a685;
+    background-color: #1b6d85;
+}
+#time_chat
+{
+    color: #080808;
 }
 #sendChat
 {
