background-color chat

--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -556,7 +556,7 @@
     height: 100%;
     width: 100%;
     top: 0%;
-    background-color: #00a65a;
+    background-color: #34a67f;
     overflow-x: hidden;
     overflow-y: scroll;
 }
