--- a/app/css/chat.css
+++ b/app/css/chat.css
@@ -651,3 +651,31 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+.flash {
+    -moz-animation: flash 2s ease-out;
+    -moz-animation-iteration-count: 1;
+
+    -webkit-animation: flash 2s ease-out;
+    -webkit-animation-iteration-count: 1;
+
+    -ms-animation: flash 2s ease-out;
+    -ms-animation-iteration-count: 1;
+}
+
+@-webkit-keyframes flash {
+    0% { background-color: none; }
+    50% { background-color: #fbf8b2; }
+    100% { background-color: none; }
+}
+
+@-moz-keyframes flash {
+    0% { background-color: none; }
+    50% { background-color: #fbf8b2; }
+    100% { background-color: none; }
+}
+
+@-ms-keyframes flash {
+    0% { background-color: none; }
+    50% { background-color: #fbf8b2; }
+    100% { background-color: none; }
+}
