--- a/app/css/login.css
+++ b/app/css/login.css
@@ -1,17 +1,3 @@
-.form-signin
-{
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-}
-.form-signin .form-signin-heading, .form-signin .checkbox
-{
-    margin-bottom: 10px;
-}
-.form-signin .checkbox
-{
-    font-weight: normal;
-}
 @font-face {
     font-family: 'Righteous-Regular';
     src: url('../fonts/Righteous/Righteous-Regular.ttf') format('truetype');
@@ -26,41 +12,17 @@
     font-size: larger;
     padding-top: 10px;
 }
-.form-signin .form-control
+#session_persiste
 {
     position: relative;
-    font-size: 16px;
-    height: auto;
-    padding: 10px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    left: 7%;
+    right: auto;
+    bottom: 80px;
 }
-.form-signin .form-control:focus
+#boutton_connexion
 {
-    z-index: 2;
-}
-.form-signin input[type="text"]
-{
-    margin-bottom: -1px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-}
-.form-signin input[type="password"]
-{
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
-.account-wall
-{
-    margin-top: 20px;
-    padding: 70px 0px 50px 0px;
-    background-color: #f7f7f7;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.3);
+    position: relative;
+    top: 20px;
 }
 .nopadding
 {
@@ -74,8 +36,17 @@
     font-weight: 400;
     display: block;
 }
-.profile-img
-{
+
+.panel-heading {
+    padding: 5px 15px;
+}
+
+.panel-footer {
+    padding: 1px 15px;
+    color: #A0A0A0;
+}
+
+.profile-img {
     width: 96px;
     height: 96px;
     margin: 0 auto 10px;
@@ -83,13 +54,4 @@
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
-}
-.need-help
-{
-    margin-top: 10px;
-}
-.new-account
-{
-    display: block;
-    margin-top: 10px;
 }
