--- a/app/css/listUser.css
+++ b/app/css/listUser.css
@@ -12,14 +12,16 @@
 #effect
 {
     position: absolute;
-    bottom: 0;
+    top: 0%;
     height: 100%;
     width: 85%;
 }
 #bodyuser
 {
-    position: relative;
-    height: 90%;
+    position: absolute;
+    top: 38px;
+    height: 93%;
+    width: 99%;
     overflow-y: scroll;
 }
 #elements
