--- a/app/css/listUser.css
+++ b/app/css/listUser.css
@@ -18,11 +18,11 @@
 }
 #bodyuser
 {
-    position: absolute;
-    top: 70px;
-    height: 85%;
-    width: 99%;
-    padding: 5px 5px 5px 5px;
+    position: relative;
+    top: 0px;
+    height: 92%;
+    width: 100%;
+    padding: 1px 1px 5px 5px;
     overflow-y: scroll;
 }
 #usersListe{
